--- a/internal/test/integration/docker-compose-http2.yml
+++ b/internal/test/integration/docker-compose-http2.yml
@@ -28,7 +28,7 @@ services:
       jaeger:
         condition: service_started
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
