--- a/internal/test/integration/docker-compose-multiexec.yml
+++ b/internal/test/integration/docker-compose-multiexec.yml
@@ -115,7 +115,7 @@ services:
     ports:
       - "8086:8085"
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
