--- a/internal/test/integration/docker-compose-ruby.yml
+++ b/internal/test/integration/docker-compose-ruby.yml
@@ -24,7 +24,7 @@ services:
     depends_on:
       - testserver
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
