--- a/internal/test/integration/k8s/manifests/06-instrumented-grpc-client-prom.template.yml
+++ b/internal/test/integration/k8s/manifests/06-instrumented-grpc-client-prom.template.yml
@@ -19,7 +19,7 @@ metadata:
   name: "{{.PodName}}"
   labels:
     component: pinger
-    # this label will trigger a deletion of beyla pods before tearing down
+    # this label will trigger a deletion of Beyla pods before tearing down
     # kind, to force Beyla writing the coverage data
     teardown: delete
   annotations:
@@ -35,9 +35,7 @@ spec:
     - name: testoutput
       persistentVolumeClaim:
         claimName: testoutput
-    - name: maincode
-      configMap:
-        name: maincode
+
   containers:
     - name: pinger
       image: grpcpinger:dev
