--- a/internal/test/integration/docker-compose-go-mqtt.yml
+++ b/internal/test/integration/docker-compose-go-mqtt.yml
@@ -33,7 +33,7 @@ services:
       jaeger:
         condition: service_started
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
