--- a/internal/test/integration/docker-compose-go-otel.yml
+++ b/internal/test/integration/docker-compose-go-otel.yml
@@ -13,7 +13,7 @@ services:
       OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "${APP_OTEL_METRICS_ENDPOINT}"
       OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "${APP_OTEL_TRACES_ENDPOINT}"
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
@@ -66,7 +66,7 @@ services:
       - "9464" # Prometheus exporter
       - "8888" # metrics endpoint
     depends_on:
-      autoinstrumenter:
+      beyla:
         condition: service_started
       prometheus:
         condition: service_started
