--- a/internal/test/integration/docker-compose-multiexec-host.yml
+++ b/internal/test/integration/docker-compose-multiexec-host.yml
@@ -119,7 +119,7 @@ services:
     ports:
       - "8086:8085"
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
