--- a/internal/test/integration/docker-compose-netolly-direction.yml
+++ b/internal/test/integration/docker-compose-netolly-direction.yml
@@ -25,7 +25,7 @@ services:
       testserver:
         condition: service_started
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
