--- a/internal/test/integration/docker-compose-netolly.yml
+++ b/internal/test/integration/docker-compose-netolly.yml
@@ -16,7 +16,7 @@ services:
     environment:
       LOG_LEVEL: DEBUG
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
