--- a/internal/test/integration/docker-compose-python-graphql.yml
+++ b/internal/test/integration/docker-compose-python-graphql.yml
@@ -12,7 +12,7 @@ services:
       otelcol:
         condition: service_started
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
