--- a/internal/test/integration/docker-compose-python-sql-ssl.yml
+++ b/internal/test/integration/docker-compose-python-sql-ssl.yml
@@ -25,7 +25,7 @@ services:
       sqlserver:
         condition: service_started
 
-  autoinstrumenter:
+  beyla:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
