--- a/internal/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
+++ b/internal/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: beyla-config
+  name: instrumenter-config
 data:
-  beyla-config.yml: |
+  instrumenter-config.yml: |
     attributes:
       kubernetes:
         enable: true
@@ -24,9 +24,10 @@ data:
     routes:
       patterns:
         - /pingpong
-      ignored_patterns:
-        - /metrics
       unmatched: path
+    ignored_patterns:
+      - /metrics
+    ignore_mode: traces
     otel_metrics_export:
       endpoint: http://otelcol:4318
     otel_traces_export:
@@ -51,9 +52,9 @@ spec:
       hostPID: true  #important!
       serviceAccountName: beyla
       volumes:
-        - name: beyla-config
+        - name: instrumenter-config
           configMap:
-            name: beyla-config
+            name: instrumenter-config
         - name: testoutput
           persistentVolumeClaim:
             claimName: testoutput
@@ -61,13 +62,13 @@ spec:
         - name: beyla
           image: beyla:dev
           imagePullPolicy: Never # loaded into Kind from localhost
-          args: ["--config=/config/beyla-config.yml"]
+          args: ["--config=/config/instrumenter-config.yml"]
           securityContext:
             privileged: true
             runAsUser: 0
           volumeMounts:
             - mountPath: /config
-              name: beyla-config
+              name: instrumenter-config
             - mountPath: /testoutput
               name: testoutput
           env:
@@ -82,6 +83,6 @@ spec:
             - name: BEYLA_OTEL_METRICS_TTL
               value: "30m0s"
             - name: BEYLA_OTEL_METRICS_FEATURES
-              value: "application,application_process"
+              value: "application"
             - name: BEYLA_NAME_RESOLVER_SOURCES
               value: "dns,k8s"
