--- a/internal/test/integration/k8s/manifests/06-beyla-netolly-dropexternal.yml
+++ b/internal/test/integration/k8s/manifests/06-beyla-netolly-dropexternal.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: beyla-config
+  name: instrumenter-config
 data:
-  beyla-config.yml: |
+  instrumenter-config.yml: |
     attributes:
       kubernetes:
         enable: true
@@ -33,7 +33,7 @@ spec:
     metadata:
       labels:
         instrumentation: beyla
-        # this label will trigger a deletion of beyla pods before tearing down
+        # this label will trigger a deletion of Beyla pods before tearing down
         # kind, to force Beyla writing the coverage data
         teardown: delete
     spec:
@@ -42,9 +42,9 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet # important to get connection to otelcollector from hostnetwork !!
       serviceAccountName: beyla
       volumes:
-        - name: beyla-config
+        - name: instrumenter-config
           configMap:
-            name: beyla-config
+            name: instrumenter-config
         - name: testoutput
           persistentVolumeClaim:
             claimName: testoutput
@@ -57,14 +57,14 @@ spec:
             runAsUser: 0
           volumeMounts:
             - mountPath: /config
-              name: beyla-config
+              name: instrumenter-config
             - mountPath: /testoutput
               name: testoutput
           env:
             - name: GOCOVERDIR
               value: "/testoutput"
             - name: BEYLA_CONFIG_PATH
-              value: /config/beyla-config.yml
+              value: /config/instrumenter-config.yml
             - name: BEYLA_NETWORK_METRICS
               value: "true"
             - name: BEYLA_NETWORK_CACHE_ACTIVE_TIMEOUT
@@ -77,5 +77,6 @@ spec:
               value: "10ms"
             - name: BEYLA_KUBE_CLUSTER_NAME
               value: "beyla"
+            # expecting to be replaced during the configuration YAML load
             - name: DEPLOYMENT_ENVIRONMENT
               value: "deployment.environment"
