--- a/internal/test/integration/k8s/manifests/06-beyla-netolly-multizone.yml
+++ b/internal/test/integration/k8s/manifests/06-beyla-netolly-multizone.yml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: beyla-config
+  name: instrumenter-config
 data:
-  beyla-config.yml: |
+  instrumenter-config.yml: |
     log_level: debug
+    metrics:
+      features: ["network", "network_inter_zone"]
     otel_metrics_export:
       endpoint: http://otelcol.default:4317
-      features: ["network", "network_inter_zone"]
     network:
       protocols:
         - TCP
@@ -41,7 +42,7 @@ spec:
     metadata:
       labels:
         instrumentation: beyla
-        # this label will trigger a deletion of beyla pods before tearing down
+        # this label will trigger a deletion of Beyla pods before tearing down
         # kind, to force Beyla writing the coverage data
         teardown: delete
     spec:
@@ -50,9 +51,9 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet # important to get connection to otelcollector from hostnetwork !!
       serviceAccountName: beyla
       volumes:
-        - name: beyla-config
+        - name: instrumenter-config
           configMap:
-            name: beyla-config
+            name: instrumenter-config
         - name: testoutput
           persistentVolumeClaim:
             claimName: testoutput
@@ -65,14 +66,14 @@ spec:
             runAsUser: 0
           volumeMounts:
             - mountPath: /config
-              name: beyla-config
+              name: instrumenter-config
             - mountPath: /testoutput
               name: testoutput
           env:
             - name: GOCOVERDIR
               value: "/testoutput"
             - name: BEYLA_CONFIG_PATH
-              value: /config/beyla-config.yml
+              value: /config/instrumenter-config.yml
             - name: BEYLA_NETWORK_METRICS
               value: "true"
             - name: BEYLA_NETWORK_CACHE_ACTIVE_TIMEOUT
@@ -85,5 +86,8 @@ spec:
               value: "10ms"
             - name: OTEL_METRIC_EXPORT_INTERVAL
               value: "5000"
+            # expecting to be replaced during the configuration YAML load
             - name: DEPLOYMENT_ENVIRONMENT
               value: "deployment.environment"
+            - name: BEYLA_NETWORK_MAX_FLOW_DURATION
+              value: "1s"
