--- a/internal/test/integration/k8s/manifests/06-beyla-netolly.yml
+++ b/internal/test/integration/k8s/manifests/06-beyla-netolly.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: beyla-config
+  name: instrumenter-config
 data:
-  beyla-config.yml: |
+  instrumenter-config.yml: |
     log_level: debug
     otel_metrics_export:
       endpoint: http://otelcol.default:4317
@@ -40,7 +40,7 @@ spec:
     metadata:
       labels:
         instrumentation: beyla
-        # this label will trigger a deletion of beyla pods before tearing down
+        # this label will trigger a deletion of Beyla pods before tearing down
         # kind, to force Beyla writing the coverage data
         teardown: delete
     spec:
@@ -49,9 +49,9 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet # important to get connection to otelcollector from hostnetwork !!
       serviceAccountName: beyla
       volumes:
-        - name: beyla-config
+        - name: instrumenter-config
           configMap:
-            name: beyla-config
+            name: instrumenter-config
         - name: testoutput
           persistentVolumeClaim:
             claimName: testoutput
@@ -64,14 +64,14 @@ spec:
             runAsUser: 0
           volumeMounts:
             - mountPath: /config
-              name: beyla-config
+              name: instrumenter-config
             - mountPath: /testoutput
               name: testoutput
           env:
             - name: GOCOVERDIR
               value: "/testoutput"
             - name: BEYLA_CONFIG_PATH
-              value: /config/beyla-config.yml
+              value: /config/instrumenter-config.yml
             - name: BEYLA_NETWORK_METRICS
               value: "true"
             - name: BEYLA_NETWORK_CACHE_ACTIVE_TIMEOUT
