--- a/internal/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
+++ b/internal/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
@@ -83,6 +83,6 @@ spec:
             - name: BEYLA_OTEL_METRICS_TTL
               value: "30m0s"
             - name: BEYLA_OTEL_METRICS_FEATURES
-              value: "application"
+              value: "application,application_process"
             - name: BEYLA_NAME_RESOLVER_SOURCES
               value: "dns,k8s"
