--- a/internal/test/integration/k8s/manifests/06-beyla-daemonset.yml
+++ b/internal/test/integration/k8s/manifests/06-beyla-daemonset.yml
@@ -85,7 +85,7 @@ spec:
             - name: BEYLA_OTEL_METRICS_TTL
               value: "30m0s"
             - name: BEYLA_OTEL_METRICS_FEATURES
-              value: "application"
+              value: "application,application_process"
             - name: BEYLA_NAME_RESOLVER_SOURCES
               value: "dns,k8s"
             - name: BEYLA_OTLP_TRACES_BATCH_TIMEOUT
