--- a/internal/test/integration/docker-compose-java-pid.yml
+++ b/internal/test/integration/docker-compose-java-pid.yml
@@ -8,7 +8,7 @@ services:
     environment:
       LOG_LEVEL: DEBUG
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
@@ -58,7 +58,7 @@ services:
       - "9464" # Prometheus exporter
       - "8888" # metrics endpoint
     depends_on:
-      beyla:
+      autoinstrumenter:
         condition: service_started
       prometheus:
         condition: service_started
