--- a/internal/test/integration/docker-compose-other-grpc.yml
+++ b/internal/test/integration/docker-compose-other-grpc.yml
@@ -30,7 +30,7 @@ services:
     environment:
       TARGET_URL: "localhost:12345"
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
@@ -80,7 +80,7 @@ services:
       - "9464" # Prometheus exporter
       - "8888" # metrics endpoint
     depends_on:
-      beyla:
+      autoinstrumenter:
         condition: service_started
       prometheus:
         condition: service_started
