--- a/internal/test/integration/docker-compose-dotnet.yml
+++ b/internal/test/integration/docker-compose-dotnet.yml
@@ -13,7 +13,7 @@ services:
       otelcol:
         condition: service_started
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile${INSTRUMENT_DOCKERFILE_SUFFIX}
