--- a/internal/test/integration/docker-compose-elasticsearch.yml
+++ b/internal/test/integration/docker-compose-elasticsearch.yml
@@ -49,7 +49,7 @@ services:
       opensearchserver:
         condition: service_started
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
