--- a/internal/test/integration/docker-compose-grpc-http2-mux.yml
+++ b/internal/test/integration/docker-compose-grpc-http2-mux.yml
@@ -25,7 +25,7 @@ services:
       jaeger:
         condition: service_started
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
