--- a/internal/test/integration/docker-compose-java.yml
+++ b/internal/test/integration/docker-compose-java.yml
@@ -11,7 +11,7 @@ services:
       otelcol:
         condition: service_started
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
