--- a/internal/test/integration/docker-compose-netolly-rdns.yml
+++ b/internal/test/integration/docker-compose-netolly-rdns.yml
@@ -8,7 +8,7 @@ services:
       - -c
       - "while true; do curl -s https://github.com/; sleep 5; done"
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
