--- a/internal/test/integration/docker-compose-nodeclient.yml
+++ b/internal/test/integration/docker-compose-nodeclient.yml
@@ -15,7 +15,7 @@ services:
       otelcol:
         condition: service_started
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
