--- a/internal/test/integration/docker-compose-perapp.yml
+++ b/internal/test/integration/docker-compose-perapp.yml
@@ -49,7 +49,7 @@ services:
     ports:
       - "8086:8085"
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
