--- a/internal/test/integration/docker-compose-python-aws.yml
+++ b/internal/test/integration/docker-compose-python-aws.yml
@@ -25,7 +25,7 @@ services:
       otelcol:
         condition: service_started
 
-  beyla:
+  autoinstrumenter:
     build:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
