--- a/internal/test/integration/k8s/manifests/06-beyla-daemonset.yml
+++ b/internal/test/integration/k8s/manifests/06-beyla-daemonset.yml
@@ -23,6 +23,8 @@ data:
         # used in the k8s_owners_*_test.go
         - k8s_statefulset_name: statefulservice
         - k8s_daemonset_name: dsservice
+        - k8s_job_name: jobservice
+        - k8s_cronjob_name: cronjobservice
       exclude_instrument:
         # testing service exclusion, by expecting that K8s discovery only picks the "otherinstance"
         # deployment (ignoring the "testserver" in the other pod)
@@ -54,7 +56,7 @@ spec:
         # kind, to force Beyla writing the coverage data
         teardown: delete
     spec:
-      hostPID: true  #important!
+      hostPID: true #important!
       serviceAccountName: beyla
       volumes:
         - name: beyla-config
