feat(helm): add minReadySeconds value with unit testing

--- a/charts/beyla/templates/daemon-set.yaml
+++ b/charts/beyla/templates/daemon-set.yaml
@@ -19,6 +19,9 @@ spec:
   updateStrategy:
     {{- toYaml . | trim | nindent 4 }}
   {{- end }}
+  {{- if ne .Values.minReadySeconds nil }}
+  minReadySeconds: {{ .Values.minReadySeconds }}
+  {{- end }}
   template:
     metadata:
       annotations:
