--- a/pkg/webhook/example/beyla.yaml
+++ b/pkg/webhook/example/beyla.yaml
@@ -86,7 +86,7 @@ data:
         key_path: /etc/webhook/certs/tls.key
       instrument:
         - k8s_namespace: "*"
-      sdk_version: v0.0.3
+      sdk_package_version: v0.0.4
       host_mount_path: /var/lib/beyla/instrumentation
     discovery:
       services:
@@ -143,47 +143,12 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       initContainers:
         - name: populate-instrumentation
-          image: ghcr.io/grafana/beyla/inject-sdk-image:0.0.3
+          image: ghcr.io/grafana/beyla/inject-sdk-image:0.0.4
           env:
-            - name: SDK_VERSION
-              value: "v0.0.3"
+            - name: SDK_PKG_VERSION
+              value: "v0.0.4"
             - name: MOUNT_PATH
               value: "/var/lib/beyla/instrumentation"
-          command: 
-            - sh
-            - -c
-            - |
-              set -e  # Exit immediately if any command fails
-              
-              # Validate if SDK_VERSION is set
-              if [ -z "${SDK_VERSION}" ]; then
-                echo "ERROR: SDK_VERSION environment variable is not set"
-                exit 1
-              fi
-              
-              # Validate if MOUNT_PATH is set
-              if [ -z "${MOUNT_PATH}" ]; then
-                echo "ERROR: MOUNT_PATH environment variable is not set"
-                exit 1
-              fi              
-
-              echo "Starting instrumentation population for SDK version ${SDK_VERSION}..."
-              
-              TARGET_DIR="${MOUNT_PATH}/${SDK_VERSION}"
-              
-              # Check if instrumentation directory already has files
-              if [ -d "${TARGET_DIR}" ] && [ -n "$(ls -A ${TARGET_DIR} 2>/dev/null)" ]; then
-                echo "Instrumentation directory ${TARGET_DIR} already populated, skipping copy"
-                exit 0
-              fi
-              
-              # Create versioned directory
-              mkdir -p "${TARGET_DIR}"
-              
-              # Copy instrumentation files
-              cp -r /dist/* "${TARGET_DIR}/"
-              
-              echo "Successfully populated instrumentation files to ${TARGET_DIR}"
           volumeMounts:
           - name: instrumentation-hostpath
             mountPath: /var/lib/beyla/instrumentation
