--- a/internal/test/integration/docker-compose-tpclient.yml
+++ b/internal/test/integration/docker-compose-tpclient.yml
@@ -1,19 +1,21 @@
 version: "3.8"
 
 services:
-  testserver:
+  tpclient:
     build:
       context: ../../..
-      dockerfile: internal/test/integration/components/nodejsserver/Dockerfile
-    image: hatest-testserver-node
-    command:
-      - node
-      - ${NODE_APP}.js
+      dockerfile: internal/test/integration/components/tpclient/Dockerfile
+    image: tpclient
     ports:
-      - 3031:3030
-      - 3034:3033
+      - "6000:6000"
+      - "6001:6001"
+      - "6002:6002"
+    environment:
+      LOG_LEVEL: DEBUG
     depends_on:
       otelcol:
+        condition: service_started
+      jaeger:
         condition: service_started
 
   autoinstrumenter:
@@ -21,51 +23,50 @@ services:
       context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
-      - --config=/configs/instrumenter-config-node.yml
+      - --config=/configs/instrumenter-config-tpclient.yml
     volumes:
       - ./configs/:/configs
       - ./system/sys/kernel/security:/sys/kernel/security
       - ../../../testoutput:/coverage
-      - ../../../testoutput/run-nodejs:/var/run/beyla
+      - ../../../testoutput/run-tpclient:/var/run/beyla
     image: hatest-autoinstrumenter
-    privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
-    network_mode: "service:testserver"
-    pid: "service:testserver"
+    privileged: true
+    pid: "host"
     environment:
       GOCOVERDIR: "/coverage"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span"
       BEYLA_TRACE_PRINTER: "text"
-      BEYLA_OPEN_PORT: "${BEYLA_OPEN_PORT}"
-      BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
-      BEYLA_EXECUTABLE_NAME: "${BEYLA_EXECUTABLE_NAME}"
-      BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
-      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
       BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_HOSTNAME: "beyla"
-      BEYLA_BPF_TRACK_REQUEST_HEADERS: "true"
-    depends_on:
-      testserver:
-        condition: service_started
+      BEYLA_INTERNAL_METRICS_PROMETHEUS_PORT: 8999
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
+      BEYLA_BPF_HIGH_REQUEST_VOLUME: 1
+      BEYLA_BPF_OPEN_PORT: "6000,6001,6002"
+      BEYLA_BPF_CONTEXT_PROPAGATION: "headers"
+      BEYLA_EXECUTABLE_NAME: "${BEYLA_EXECUTABLE_NAME}"
+    ports:
+      - "8999:8999"
 
   # OpenTelemetry Collector
   otelcol:
-    image: otel/opentelemetry-collector-contrib:0.144.0@sha256:213886eb6407af91b87fa47551c3632be1a6419ff3a5114ef1e6fc364628496f
+    image: otel/opentelemetry-collector-contrib:0.118.0@sha256:3f6274fe609da4f9964fbc2ef36b83d08d47964fbb11629251393590d3924072
     container_name: otel-col
     deploy:
       resources:
         limits:
           memory: 125M
     restart: unless-stopped
-    command: ["--config=/etc/otelcol-config/otelcol-config.yml"]
+    command: ["--config=/etc/otelcol-config/otelcol-config-4017.yml"]
     volumes:
       - ./configs/:/etc/otelcol-config
     ports:
-      - "4317" # OTLP over gRPC receiver
-      - "4318:4318" # OTLP over HTTP receiver
-      - "9464" # Prometheus exporter
-      - "8888" # metrics endpoint
+      - "4017"
+      - "4018:4018"
+      - "9464"
+      - "8888"
     depends_on:
       prometheus:
         condition: service_started
@@ -78,6 +79,7 @@ services:
       - --config.file=/etc/prometheus/prometheus-config.yml
       - --web.enable-lifecycle
       - --web.route-prefix=/
+      - --log.level=debug
     volumes:
       - ./configs/:/etc/prometheus
     ports:
@@ -86,9 +88,9 @@ services:
   jaeger:
     image: jaegertracing/all-in-one:1.60@sha256:4fd2d70fa347d6a47e79fcb06b1c177e6079f92cba88b083153d56263082135e
     ports:
-      - "16686:16686" # Query frontend
-      - "4317" # OTEL GRPC traces collector
-      - "4318" # OTEL HTTP traces collector
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
     environment:
       - COLLECTOR_OTLP_ENABLED=true
       - LOG_LEVEL=debug
