--- a/internal/test/integration/components/beyla/Dockerfile-with-javaagent
+++ b/internal/test/integration/components/beyla/Dockerfile-with-javaagent
@@ -28,7 +28,7 @@ FROM gradle:9.3.0-jdk21-corretto@sha256:2458e66c572212fd24f55ffecde7b88fafdba81e
 WORKDIR /build
 
 # Copy build files
-COPY .obi-src/pkg/internal/java .
+COPY java-vendor/java .
 
 # Build the project
 RUN ./gradlew build --no-daemon
