--- a/.github/workflows/publish_dockerhub_pre_release.yml
+++ b/.github/workflows/publish_dockerhub_pre_release.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: "false"
+          submodules: "recursive"
       - id: push-beyla-to-dockerhub
         uses: grafana/shared-workflows/actions/build-push-to-dockerhub@fa48192dac470ae356b3f7007229f3ac28c48a25 # main
         with:
