--- a/.github/workflows/publish_dockerhub_release.yml
+++ b/.github/workflows/publish_dockerhub_release.yml
@@ -3,7 +3,7 @@ name: Push to DockerHub (release)
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 permissions:
   contents: read
@@ -17,7 +17,8 @@ jobs:
       - id: checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
-          persist-credentials: 'false'
+          persist-credentials: "false"
+          submodules: "recursive"
       - id: push-beyla-to-dockerhub
         uses: grafana/shared-workflows/actions/build-push-to-dockerhub@fa48192dac470ae356b3f7007229f3ac28c48a25 # main
         with:
